# gitlab-codeowners-linter

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
.github/workflows/: push.yml
gitlab_codeowners_linter/: autofix.py  check_and_fix.py  checks.py  codeowners_linter.py  constants.py  input.py  parser.py  sorting.py
tests/: codeowners_linter_tests.py  codeowoners_linter_tests.py
tests/resources/: existing_paths_autofix.txt  existing_paths_input.txt  formatted_input.txt  issue29_input.txt  no_default_section_autofix.txt  no_default_section_input.txt  optional_sections_autofix.txt  optional_sections_input.txt  unformatted_autofix.txt  unformatted_input.txt
