[metadata]
name = gitlab_codeowners_linter
version = 1.0.2
description = Some out-of-the-box hooks for Gitlab CODEOWNERS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Qarik-Group/gitlab-codeowners-linter
author = Gaspare Vitta
author_email = gvitta@qarik.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    pathspec

[options.entry_points]
console_scripts =
    gitlab-codeowners-linter = gitlab_codeowners_linter.codeowners_linter:main
